<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.city.safe.activity.RegisterActivity">


    <LinearLayout
        android:id="@+id/regisster_panel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:divider="#000000"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/dittext_outline_shape"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/register_email"
            android:layout_marginTop="10dp"
            android:background="@drawable/dittext_outline_shape"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/register_password2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/register_password"
            android:layout_marginTop="10dp"
            android:background="@drawable/dittext_outline_shape"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/register_password2"
            android:layout_marginTop="10dp"
            android:background="@drawable/dittext_outline_shape"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textCursorDrawable="@null" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/regisster_panel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regisster_panel"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/regisster_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regisster_panel"
            android:layout_marginTop="20dp"
            android:text="@string/read_and_agree"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/serviceword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:linksClickable="true"
            android:text="@string/serviceword2"
            android:textColor="#0099ff"
            android:textSize="16sp" />
    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/regisster_panel2"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal">
    <Button
        android:id="@+id/cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regisster_panel2"
        android:layout_marginTop="50dp"
        android:background="@drawable/register_cancle_shape"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/register_agree_shape"
        android:layout_below="@id/regisster_panel2"
        android:layout_marginTop="50dp"
        android:text="@string/register" />
</LinearLayout>


</RelativeLayout>
