<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.city.safe.activity.MyDataActivity">

    <LinearLayout
        android:id="@+id/regisster_panel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:divider="#000000"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changemydata"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="15dp"
            android:background="@drawable/dittext_outline_shape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="邮箱:"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/register_email"
                android:textSize="18sp"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/register_email"
            android:layout_marginTop="10dp"
            android:background="@drawable/dittext_outline_shape"
            android:hint="@string/oldpassword"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/register_password2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/register_password"
            android:layout_marginTop="10dp"
            android:background="@drawable/dittext_outline_shape"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textCursorDrawable="@null" />
        <EditText
            android:id="@+id/register_password3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/register_password2"
            android:layout_marginTop="10dp"
            android:background="@drawable/dittext_outline_shape"
            android:hint="@string/passwordagain"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textCursorDrawable="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="15dp"
            android:layout_below="@id/register_password3"
            android:layout_marginTop="10dp"
            android:background="@drawable/dittext_outline_shape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="用户名:"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/register_username"
                android:textSize="18sp"
                android:paddingLeft="5dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:textColor="#000000"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regisster_panel"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regisster_panel"
            android:layout_marginTop="50dp"
            android:background="@drawable/register_cancle_shape"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/register_agree_shape"
            android:layout_below="@id/regisster_panel"
            android:layout_marginTop="50dp"
            android:text="@string/change" />
    </LinearLayout>


</RelativeLayout>
